add service worker

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,6 +9,6 @@
         <base href="/">
     </head>
     <body>
-        <app>Loading...</app>
+        <sw-app>Loading...</sw-app>
     </body>
 </html>
