--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,7 @@
     <base href="./"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/static/manifest.json">
     <link href="//fonts.googleapis.com/css?family=Lato:300,400,400italic,700,700italic" rel="stylesheet"
           type="text/css">
     <base href="/">
